@@ -723,7 +723,8 @@ if(FALSE) ## to be used in setMethod("c", "numM...") -- once that works
 setClassUnion("numMatrixLike", members = c("logical", "integer", "numeric", "mMatrix"))
 
 ## CARE: Sometimes we'd want all those for which 'x' contains all the data.
-##       e.g. Diagonal() is "ddiMatrix" with 'x' slot of length 0, does *not* contain 1
+##       e.g. Diagonal() is "ddiMatrix" with 'x' slot of length 0, not containing 1
+##       same for other  diag="U" (e.g. tridiag)
 setClassUnion("xMatrix", ## those Matrix classes with an 'x' slot
               c("dMatrix",
                 "iMatrix",
