@@ -10,13 +10,16 @@
   higher-dimensional tensor decompositions, see Bader and Kolda (2008).
 }
 \usage{
-KhatriRao(X, Y = X, FUN = "*", make.dimnames = FALSE)
+KhatriRao(X, Y = X, FUN = "*", sparseY = TRUE, make.dimnames = FALSE)
 }
 \arguments{
   \item{X,Y}{matrices of with the same number of columns.}
   \item{FUN}{the (name of the) \code{\link{function}} to be used for the
     column-wise Kronecker products, see \code{\link{kronecker}},
     defaulting to the usual multiplication.}
+  \item{sparseY}{logical specifying if \code{Y} should be coerced and
+    treated as \code{\linkS4class{sparseMatrix}}.   Set this to
+  \code{FALSE}, e.g., to distinguish structural zeros from zero entries.}
   \item{make.dimnames}{logical indicating if the result should inherit
     \code{\link{dimnames}} from \code{X} and \code{Y} in a simple way.}
 }
@@ -86,6 +89,31 @@ stopifnot(all(K3 <- KhatriRao(d0, m) == 0), identical(dim(K3), dim(Kdm)),
 	  all(KhatriRao(d0, d0) == 0), all(KhatriRao(m0, d0) == 0),
 	  all(KhatriRao(d0, m0) == 0), all(KhatriRao(m0, m0) == 0),
 	  identical(dimnames(KhatriRao(m, d0, make.dimnames=TRUE)), dimnames(Kmd)))
+
+## a matrix with "structural" and non-structural zeros:
+m01 <- new("dgCMatrix", i = c(0L, 2L, 0L, 1L), p = c(0L, 0L, 0L, 2L, 4L),
+           Dim = 3:4, x = c(1, 0, 1, 0))
+D4 <- Diagonal(4, x=1:4) # "as" d
+DU <- Diagonal(4)# unit-diagonal: uplo="U"
+(K5  <- KhatriRao( d, m01))
+K5d  <- KhatriRao( d, m01, sparseY=FALSE)
+K5Dd <- KhatriRao(D4, m01, sparseY=FALSE)
+K5Ud <- KhatriRao(DU, m01, sparseY=FALSE)
+(K6  <- KhatriRao(diag(3),     t(m01)))
+K6D  <- KhatriRao(Diagonal(3), t(m01))
+K6d  <- KhatriRao(diag(3),     t(m01), sparseY=FALSE)
+K6Dd <- KhatriRao(Diagonal(3), t(m01), sparseY=FALSE)
+stopifnot(exprs = {
+    all(K5 == K5d)
+    identical(cbind(c(7L, 10L), c(3L, 4L)),
+              which(K5 != 0, arr.ind = TRUE, useNames=FALSE))
+    identical(K5d, K5Dd)
+    identical(K6, K6D)
+    all(K6 == K6d)
+    identical(cbind(3:4, 1L),
+              which(K6 != 0, arr.ind = TRUE, useNames=FALSE))
+    identical(K6d, K6Dd)
+})
 }
 \keyword{methods}
 \keyword{array}
